# devops-nido

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README_FIRST.md  fly.toml  generate_mock_data.py  pyproject.toml
nido_backend/: auth_rules.polar  authorization.py  db_models.py  enums.py  gql_errors.py  gql_helpers.py  gql_mutation.py  gql_mutation_authentication.py  gql_mutation_billing_charge.py  gql_mutation_contact_method.py  gql_mutation_group.py  gql_mutation_issue.py  gql_mutation_prospective_resident.py  gql_mutation_right.py  gql_permissions.py  gql_query.py  gql_schema.py  main.py
nido_frontend/: admin_blueprint.py  admin_dashboard.py  admin_manage_groups.py  admin_manage_moveins.py  admin_manage_rights.py  admin_manage_signatures.py  apply.py  authentication.py  billing.py  documents.py  household.py  main.py  main_menu.py  report_issues.py  resident_directory.py  signatures.py
nido_frontend/resources/html_templates/: admin-dash.html  all-signatures.html  assign-signatures.html  base.html  billing.html  confirm-movement.html  documents.html  edit-group.html  household.html  login.html  main-menu.html  manage-groups.html  manage-moveins.html  manage-rights.html  manage-sig-template.html  manage-signatures.html  my-signatures.html  new-group.html  new-issue.html  new-right.html  prospect-details.html  register-prospective.html  report-issues.html  resident-dir.html  sign-docs.html  signatures.html  upload-unsigned.html  view-signed-doc.html
nido_frontend/resources/static/sass/: _form.scss  _login.scss  _nav.scss  _pdf.scss  _report_issue.scss  _table.scss  style.scss
tests_backend/: conftest.py  test_db_models.py  test_gql_mutation_contact_method.py  test_gql_mutation_group.py  test_gql_query.py  test_oso_policy.py
